chore(canvas): use canvas

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="js-main" class="main">
-
+    <canvas id="screen" width="400" height="100"></canvas>
 </div>
 <script src="./index.ts"></script>
 </body>
