--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <div id="js-main" class="main">
-    <canvas id="screen" width="400" height="100"></canvas>
+    <canvas id="screen" width="400" height="100" style="background-color: black;"></canvas>
+    <input type="file" accept="video/*">
 </div>
 <script src="./index.ts"></script>
 </body>
