--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>parcel app</title>
+    <title>Red Meme</title>
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
