--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-<div id="js-main" class="main">
-    <canvas id="screen" width="100" height="400" style="background-color: black;"></canvas>
-    <input type="file" accept="video/*">
+<div id="container" class="container">
+    <div class="main">
+        <canvas id="main__screen" width="100" height="400" style="background-color: black;"></canvas>
+    </div>
+    <div class="menu">
+        <input type="file" accept="video/*" class="menu__video"/>
+    </div>
 </div>
 <script src="./index.ts"></script>
 </body>
