feat(menu): show video details

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     </div>
     <div class="menu">
         <input type="file" accept="video/*" class="menu__video"/>
+        <div class="menu__details"></div>
     </div>
 </div>
 <script src="./index.ts"></script>
