feat(menu): start

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <div class="menu">
         <input type="file" accept="video/*" class="menu__video"/>
         <div class="menu__details"></div>
+        <button class="menu__start" disabled>Start!</button>
     </div>
 </div>
 <script src="./index.ts"></script>
