--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Red Meme</title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
